# DataSynthTool

./: Makefile  README.md  README.rst  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  tox.ini
data/: employee.csv  manager.csv
docs/: conf.py  containers.rst  context.rst  future.rst  index.rst  install.rst  synthetic_data.slides.html  use.rst
docs/_build/doctrees/: code.doctree  components.doctree  containers.doctree  context.doctree  environment.pickle  future.doctree  index.doctree  install.doctree  synthetic_data.doctree  use.doctree
docs/_build/html/: .buildinfo  code.html  components.html  containers.html  context.html  future.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  synthetic_data.html  use.html
docs/_build/html/_sources/: code.rst.txt  components.rst.txt  containers.rst.txt  future.rst.txt  index.rst.txt  install.rst.txt  use.rst.txt
notebooks/: data_model.puml  draft_implementation.ipynb  synthetic_data.ipynb  synthetic_data.rst  synthetic_data.slides.html
src/synthdata/: __init__.py  base.py  synths.py
tests/: sample_app.py  sample_schema.py  test_model.py  test_synths.py
