[project]
name = "DataSynthTool"
description = "Synthetic Data Tools"
readme = "README.rst"
requires-python = ">=3.12"
version = "2024.8"

[tools.setuptools]
package_dir = {"" = "src"}
packages = ["synthdata"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
